k8s-jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resttemplateserver
  labels:
    app: resttemplateserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resttemplateserver
  template:
    metadata:
      labels:
        app: resttemplateserver
    spec:
      containers:
        - name: resttemplateserver
          image: raksmeychea/resttemplateserver:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: otel-agent
              mountPath: /otel

      volumes:
        - name: otel-agent
          hostPath:
            path: /otel
            type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: resttemplateserver
spec:
  type: NodePort
  selector:
    app: resttemplateserver
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30104
