k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resttemplateserver
  labels:
    app: resttemplateserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resttemplateserver
  template:
    metadata:
      labels:
        app: resttemplateserver
   
    spec:
      containers:
        - name: resttemplateserver
          image: 210.90.24.172:8080/restproject/raksmeychea/resttemplateserver:90eb31a250a75095d133e531c2698890c6cfa704
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: resttemplateserver
spec:
  type: NodePort
  selector:
    app: resttemplateserver
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30102
